Archive2/6e/cebb5fc8fd637e/output
main.cpp: In function 'int main()':
main.cpp:7:19: error: void value not ignored as it ought to be
     int* deref = *ptr;
                   ^
main.cpp:7:10: warning: unused variable 'deref' [-Wunused-variable]
     int* deref = *ptr;
          ^
In file included from /usr/local/include/boost/shared_ptr.hpp:17:0,
                 from main.cpp:2:
/usr/local/include/boost/smart_ptr/shared_ptr.hpp: In instantiation of 'typename boost::detail::sp_dereference<T>::type boost::shared_ptr<T>::operator*() const [with T = int []; typename boost::detail::sp_dereference<T>::type = void]':
main.cpp:7:19:   required from here
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:642:17: error: return-statement with a value, in function returning 'void' [-fpermissive]
         return *px;
                 ^
