Archive2/6e/cebb5fc8fd637e/main.cpp
#include <memory>
#include <boost/shared_ptr.hpp>
#include <iostream>

int main() {
    boost::shared_ptr<int[]> ptr(new int[5]);
    int* deref = *ptr;
}